updated TODO file

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+** make battery run faster (remove multiple calls to ioreg)
+
 * add command options for seperate battery report items
 	percentage, time left, (un)connected
 
